# g3dviewer

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac  configure.in  g3dviewer.desktop.in  genchangelog.sh
announce/: g3dviewer-0.1.1.txt  g3dviewer-0.1.99.1.txt  g3dviewer-0.2.99.2.txt  g3dviewer-0.2.99.3.txt
debian/: changelog  control  g3dviewer.install  rules
examples/: Makefile.am  g3d.ac  g3d.blend
glade/: Makefile.am  g3dviewer.glade  g3dviewer.gladep
libs/: Makefile.am
libs/g3dgl/: G3DGLRenderer.c  G3DGLRenderer.h  G3DGLSimpleRenderer.c  G3DGLSimpleRenderer.h  G3DGLTessRenderer.c  G3DGLTessRenderer.h  Makefile.am  g3dgl.c  g3dgl.h  test_tess.c
libs/g3dgl-widget/: G3DGLWidget.c  G3DGLWidget.h  G3DGLWidgetPriv.h  G3DGLWidgetProperties.c  G3DGLWidgetProperties.h  G3DGLWidgetRender.c  Makefile.am  test_g3dw.c
m4/: Makefile.am  acinclude.m4
man/: Makefile.am  g3dviewer.1
pixmaps/: Makefile.am
po/: POTFILES.in  de.po  g3dviewer.pot
src/: .cvsignore  G3DGLWidget.c  G3DGLWidget.h  G3DGLWidgetPriv.h  G3DGLWidgetRender.c  G3DGLWidgetRender.h  Makefile.am  gl.c  gl.h  gl_helpers.c  glarea.c  glarea.h  gui_callbacks.c  gui_glade.c  gui_glade.h  gui_infowin.c  gui_infowin.h  gui_log.c  gui_log.h  infowin.c  infowin.h  interface.c  interface.h  main.c  main.h  model.c  model.h  screenshot.c  screenshot.h  test_g3dw.c  texture.c  texture.h
thumbnailer/: Makefile.am  g3d-thumbnailer.c  g3dviewer.xml  gen_schema.sh
thumbnailer/html/: g3dnp.js  index.html
